--- a/style.css
+++ b/style.css
@@ -460,6 +460,7 @@ input {
   font-family: 'Press Start 2P', cursive;
   font-size: 1rem;
   margin-top: 36px;
+  margin-left: 0px;
   color: var(--primary);
   text-align: center;
   margin-bottom: 2rem;
@@ -2314,3 +2315,4 @@ input {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--primary);
 }
+
